@@ -2,6 +2,11 @@
 # Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
 # $Header
 
+*bbdate-0.2.4 (19 Jun 2003)
+
+  19 Jun 2003; mkeadle <mkeadle@gentoo.org> bbdate-0.2.4.ebuild:
+  bump to latest upstream stable
+
 *bbdate-0.2.3 (12 Dec 2002)
   
   12 Dec 2002; Matt Keadle <mkeadle@gentoo.org> bbdate-0.2.3.ebuild
